--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-facebook-api-factory",
   "description": "angularjs factory for facebook json rest api requests",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "Gruntfile.js",
   "authors": [
     "Jonathan Hornung"
@@ -26,6 +26,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "*"
   }
 }
