--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-facebook-api-factory",
   "version": "0.5.0",
   "description": "angularjs factory for facebook json rest api requests",
-  "main": "Gruntfile.js",
+  "main": "dist/angular-facebook-api-factory.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
     "angularjs",
     "angular",
     "facebook",
+    "graph",
     "api",
     "factory"
   ],
@@ -23,8 +24,12 @@
     "url": "https://github.com/JohnnyTheTank/angular-facebook-api-factory/issues"
   },
   "homepage": "https://github.com/JohnnyTheTank/angular-facebook-api-factory#readme",
+  "dependencies": {
+    "angular": "*"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1"
   }
