--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "angular-facebook-api-factory",
   "description": "angularjs factory for facebook json rest api requests",
   "version": "0.5.0",
-  "main": "Gruntfile.js",
+  "main": "dist/angular-facebook-api-factory.js",
   "authors": [
     "Jonathan Hornung"
   ],
